--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <h2>Absolute URLs</h2>
-<p><a href="html/1991.html/">1991 Tours</a></p>
+<h2>Some Tours</h2>
+<p><a href="html/1991.html/">All 1991 Tours</a></p>
 <p><a href="html/1992_Spring_Tour.html/">1992 Spring Tour</a></p>
 
