--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <h2>Some Tours</h2>
+<p><a href="html/PhishVenues.html">All Venues (Phish + side projects)</a></p>
+<p/>
+<p><a href="html/1988_Tour.html">1988 Tour</a></p>
 <p><a href="html/1991.html">All 1991 Tours</a></p>
 <p><a href="html/1992_Spring_Tour.html">1992 Spring Tour</a></p>
-<p><a href="html/1988_Tour.html">1988 Tour</a></p>
