--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@
 <p><a href="html/1989_tour.html">1989 Tour</a></p>
 <p><a href="html/1991.html">All 1991 Tours</a></p>
 <p><a href="html/1992_Spring_Tour.html">1992 Spring Tour</a></p>
+<p>  <a href="html/1992_Spring_Tour_Timestamped.html">1992 Spring Tour with slider</a></p>
