--- a/html/all_1994.html
+++ b/html/all_1994.html
@@ -3442,4 +3442,22 @@
 
         
 </script>
+<style>
+    .leaflet-control-layers-selector {
+        background-color: transparent !important;
+    }
+    .leaflet-control-layers-overlays label:nth-child(1) span {
+        color: red !important;
+    }
+    .leaflet-control-layers-overlays label:nth-child(2) span {
+        color: green !important;
+    }
+    .leaflet-control-layers-overlays label:nth-child(3) span {
+        color: blue !important;
+    }
+    .leaflet-control-layers-overlays label:nth-child(4) span {
+        color: orange !important;
+    }
+</style>
+
 </html>
