--- a/kglw/kglw.html
+++ b/kglw/kglw.html
@@ -4,3 +4,5 @@
 <p><a href="World_Tour_2022_Fall.html">World Tour 2022 Fall</a></p>
 <p><a href="World_Tour_2022_Spring_Summer.html">World Tour 2022 Spring Summer</a></p>
 <p><a href="World_Tour_2019.html">World Tour 2019</a></p>
+<p/>
+<p><a href="kglwVenues.html">All Venues Played</a></p>
